<resources>
    <string name="image_description">This is a image!</string>
    <string name="crash_info">Oh~~Application is terminated.</string>
    <string name="network_default_wifi_name">WIFI</string>
    <string name="network_default_ethernet_name">Ethernet</string>
    <string name="network_default_2G_name">2G</string>
    <string name="network_default_3G_name">3G</string>
    <string name="network_default_4G_name">4G</string>
    <string name="network_default_pppoe">PPPOE</string>
    <string name="network_not_available">Network Not Available</string>
    <string name="zip_fail_exception_caught">Error occurred in zip processing.</string>
    <string name="zip_fail_file_can_not_read">Unable to read from input file, zip-process stoped.</string>
    <string name="zip_fail_out_of_space">Out of disk space, zip-process stoped.</string>
    <string name="unsurport_file">File is not supported</string>
    <string name="common_storage_name_local">Local</string>
    <string name="common_storage_name_sdcard">SD_%02d</string>
    <string name="common_storage_name_usb">USB_%02d</string>
    <string name="network_req_failed">Network request failed!</string>
    <string name="network_req_time_out">Request network time out, try again later!</string>
    <string name="network_resp_error_region_country_unavailable">Your country or region is unavailable for requesting these information.</string>
    <string name="ko_no_focus_tag">KO_NO_FOCUS</string>
    <string name="task_status_waiting">Waiting</string>
    <string name="task_status_running">Downloading</string>
    <string name="task_status_paused">Paused</string>
    <string name="task_status_success">Success</string>
    <string name="task_status_failed">Failed</string>
    <string name="task_status_deleted">Deleted</string>
    <string name="task_status_ready">Ready</string>
    <string name="downloadengine_error_default">Download Engine encountered an internal error(%1$d)!</string>
    <string name="downloadengine_error_invalid_task">Invalid Task!</string>
    <string name="downloadengine_error_etm_out_of_memory">Download Engine is out of memory!</string>
    <string name="downloadengine_error_task_already_exist">This Task is already exist!</string>
    <string name="downloadengine_error_file_already_exist">This File is already exist!</string>
    <string name="downloadengine_error_game_already_exist">This Game is already exist!</string>
    <string name="http_downloadengine_error_default">Download Engine encountered an internal error(%1$d)!</string>
    <string name="http_downloadengine_error_insufficient_disk_space">Insufficient Disk Space</string>
    <string name="http_downloadengine_error_cid_check_fail">File check failed</string>
    <string name="http_downloadengine_error_io_exception">IO Exception</string>
    <string name="http_downloadengine_error_http_url_noresponse">URL no response</string>
    <string name="app_name">KOBattleChannel</string>
    <string name="bnet_msg_waiting_tired">Be quick! I am so bored…</string>
    <string name="ga_trackingId">UA-36039055-2</string>
    <string name="hello">Hello World, PpssppActivity!</string>
    <string name="shortcut_name">PPSSPP game</string>
    <string name="emu_game_is_unavailable">The game file is unavailable</string>
    <string name="load_rom_failed">Load game failed. Please try another file.</string>
    <string name="rom_not_supported">Game file is not supported.</string>
    <string name="rom_not_exist">Game file lost!</string>
    <string name="quit_game_title">Quit</string>
    <string name="load_state_title">Load Game</string>
    <string name="load_state_success">Load game successfully</string>
    <string name="load_state_fail">Load game failed</string>
    <string name="save_state_title">Save Game</string>
    <string name="audio_settings">Audio settings</string>
    <string name="enable_sound">Enable sound</string>
    <string name="sound_volume">Volume</string>
    <string name="video_settings">Video settings</string>
    <string name="scaling_mode">Scaling mode</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="fast_forward_speed">Fast forward speed</string>
    <string name="frame_skip_settings">Frame skip settings</string>
    <string name="frame_skip_mode">Frame skip mode</string>
    <string name="max_frame_skips">Max frame skips</string>
    <string name="max_frame_skips_summary">Maximum number of consecutive frame skips</string>
    <string name="refresh_rate">Screen refresh rate</string>
    <string name="auto_frame_skip">Automatic frame skip</string>
    <string name="settings_title">Setting</string>
    <string name="audio_video_settings">Audio video settings</string>
    <string name="accurate_rendering">Accurate rendering</string>
    <string name="accurate_rendering_summary">May reduce speed!</string>
    <string name="refresh_rate_summary">MOTO Droid 2.1 should set to 30！</string>
    <string name="accurate_rendering_prompt">Take effect after restart</string>
    <string name="global_model">Global model</string>
    <string name="asm_cpu_cores_sumary">Use the compatibility list, compatible with a variety of processors, can obtain better performance, but reduces compatibility may reduce speed!</string>
    <string name="video_rendering_mode">Video rendering mode</string>
    <string name="sound_thread">Sound thread</string>
    <string name="sound_thread_sumary">Separate open voice thread can get softer voice, but also will affect the game fluency</string>
    <string name="power_model">Power saving mode</string>
    <string name="power_model_sumary">Some devices open set power-saving mode to save power</string>
    <string name="display_mode">Landscape display Settings</string>
    <string name="zoom_model">Zoom model</string>
    <string name="smoothing_model">Smoothing model</string>
    <string name="smoothing_model_sumary">Make the image more smooth</string>
    <string name="windows_model">Windows model</string>
    <string name="windows_model_sumary">Play a game without sunscreen</string>
    <string name="required_libs_are_missed">Miss required components to run emulator!</string>
    <string name="imageview">imageview</string>
    <string name="gamepad_connected">Game Pad %1$s is connected.</string>
    <string name="gamepad_quited">Game Pad %1$s is disconnected.</string>
    <string name="recommend">HOT</string>
    <string name="category">CATEGORIES</string>
    <string name="special">SERIES</string>
    <string name="new_game">NEW</string>
    <string name="my">MY CENTER</string>
    <string name="me">me</string>
    <string name="you">you</string>
    <string name="waiting">Waiting…</string>
    <string name="setting">SETTINGS</string>
    <string name="game_details">Game Details</string>
    <string name="online_time">Online:%1$s</string>
    <string name="my_game">My Games</string>
    <string name="my_game_head">Total%1$sGames</string>
    <string name="game_manage">Game Manager</string>
    <string name="my_hand">Gamepads</string>
    <string name="more_setting">More Settings</string>
    <string name="available_space">Free:%1$s</string>
    <string name="storage_space">Storages</string>
    <string name="storage_head">Total %1$s Storages</string>
    <string name="local_storage">Local</string>
    <string name="is_default_location">Default</string>
    <string name="set_default_location">Set to default storage</string>
    <string name="prompt">prompt</string>
    <string name="set_default_location_succeed">Set default storage successfully！</string>
    <string name="add_game_prompt">"For quick start，
add shortcut to “My Games“!"</string>
    <string name="confirm_add">Add Now</string>
    <string name="cancel_add">Next Time</string>
    <string name="add_succeed">Add shortcut to “My Games“ successfully！</string>
    <string name="press_quit">Press “quit“ again to quit</string>
    <string name="data_error">Get data error!</string>
    <string name="quit_prompt">Are you sure you want to quit?</string>
    <string name="ko_game_contact_info">Fans QQ Group:320086294 / Corperation:2629962501</string>
    <string name="network_connect_fail">Network connection failed, please check your network！</string>
    <string name="network_is_required_to_next_action">Network is required to do the next action！</string>
    <string name="quit_prompt_hasdownload">Some of download tasks are not completed，are you sure you want to quit?</string>
    <string name="quit_do_download">Quit but download still</string>
    <string name="quit_app">Quit</string>
    <string name="back">Back</string>
    <string name="quit">Quit</string>
    <string name="try_again">Try Again</string>
    <string name="delete">Delete</string>
    <string name="finish_game_download">%1$s download completed!</string>
    <string name="finish_game_install">%1$s installation completed!</string>
    <string name="install_game_fail">Installation failed！%1$s</string>
    <string name="request_game_info_failed">Fail to get gamedata!(id=%1$s)</string>
    <string name="press_any_key_to_enter">Press Any Key to skip</string>
    <string name="loading_config">Loading Config···</string>
    <string name="loading_images">Loading Images%1$s</string>
    <string name="data_loading">Loading data,please wait…</string>
    <string name="net_not_good_data_load_fail">Network error，fail to load data…</string>
    <string name="no_net_data_load_fail">Network error，fail to load data…</string>
    <string name="gamepad_game">Need Gamepad</string>
    <string name="file_size">Size:%1$s</string>
    <string name="no_memery">Available space of storage is not enough, please clean up the storage.</string>
    <string name="cpu_not_enough">Your device may not be able to run the game smoothly.</string>
    <string name="space_not_enough">(not enough)</string>
    <string name="device_not_enough">Equipment performance deficiencies</string>
    <string name="platform">Platform:%1$s</string>
    <string name="gametype">Type:%1$s</string>
    <string name="gamelang">Language:%1$s</string>
    <string name="gameplaytype">Play Type:</string>
    <string name="startapp">Start APP</string>
    <string name="startgame">Start Game</string>
    <string name="serachgame">Search Game</string>
    <string name="canceldownload">Cancel Download</string>
    <string name="wait_install">Waiting for Installing</string>
    <string name="startinstall">Start to Install</string>
    <string name="installing">Installing…</string>
    <string name="uninstalling">Uninstalling…</string>
    <string name="wait_downloading">Waiting…</string>
    <string name="downloading">Downloading</string>
    <string name="cancelinstall">Cancel Install</string>
    <string name="freespace">Available : %1$s</string>
    <string name="install_space">Installing space needed:%1$s</string>
    <string name="download_game_prompt">Cancel download “%1$s“？</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="continue_game">Continue</string>
    <string name="keymapping">Key-Mapping</string>
    <string name="save_archive">Save Archive</string>
    <string name="read_archive">Load Save</string>
    <string name="advanced_setting">Advanced Setting</string>
    <string name="quit_game">Quit</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="my_account_nick_name">Nick Name:%1$s</string>
    <string name="my_account_modif_nick_name">Modify Name</string>
    <string name="my_account_modif_nick_avatar">Modify Avatar</string>
    <string name="office">【office】</string>
    <string name="office_tips">Welcome to join QQ group :209295832，concern WeChat public number: kogames</string>
    <string name="broadcast_image_view">broadcast image view</string>
    <string name="ko_my_account_record">Record</string>
    <string name="ko_my_account_test_str">最近登录时间：2015年3月5日17:17:08</string>
</resources>