<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:focusable="false" android:descendantFocusability="afterDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/main_frame_activity_sw_bg" android:focusable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitXY" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/app_name" />
    <cn.vszone.ko.tv.views.CustomFocusViewPager android:id="@id/main_frame_activity_vp_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/main_frame_activity_lyt_bottom_tabs" />
    <cn.vszone.ko.tv.views.NavigationBars android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/main_frame_activity_lyt_bottom_tabs" android:focusable="false" android:descendantFocusability="afterDescendants" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/main_frame_tabs_margin_bottom_68px" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <cn.vszone.ko.tv.views.NavigationItemBar android:id="@id/main_frame_activity_tv_tab_mine" android:focusable="true" android:nextFocusLeft="@id/main_frame_activity_tv_tab_my_setting" android:nextFocusRight="@id/main_frame_activity_tv_tab_recommend" android:text="@string/my" style="@style/NavigationBar" />
        <cn.vszone.ko.tv.views.NavigationItemBar android:id="@id/main_frame_activity_tv_tab_recommend" android:focusable="true" android:nextFocusLeft="@id/main_frame_activity_tv_tab_mine" android:nextFocusRight="@id/main_frame_activity_tv_tab_category" android:text="@string/recommend" style="@style/NavigationBar" />
        <cn.vszone.ko.tv.views.NavigationItemBar android:id="@id/main_frame_activity_tv_tab_category" android:focusable="true" android:nextFocusLeft="@id/main_frame_activity_tv_tab_recommend" android:nextFocusRight="@id/main_frame_activity_tv_tab_special" android:text="@string/category" style="@style/NavigationBar" />
        <cn.vszone.ko.tv.views.NavigationItemBar android:id="@id/main_frame_activity_tv_tab_special" android:focusable="true" android:nextFocusLeft="@id/main_frame_activity_tv_tab_category" android:nextFocusRight="@id/main_frame_activity_tv_tab_new_game" android:text="@string/special" style="@style/NavigationBar" />
        <cn.vszone.ko.tv.views.NavigationItemBar android:id="@id/main_frame_activity_tv_tab_new_game" android:focusable="true" android:nextFocusLeft="@id/main_frame_activity_tv_tab_special" android:nextFocusRight="@id/main_frame_activity_tv_tab_my_setting" android:text="@string/new_game" style="@style/NavigationBar" />
        <cn.vszone.ko.tv.views.NavigationItemBar android:id="@id/main_frame_activity_tv_tab_my_setting" android:focusable="true" android:nextFocusLeft="@id/main_frame_activity_tv_tab_new_game" android:nextFocusRight="@id/main_frame_activity_tv_tab_mine" android:text="@string/setting" style="@style/NavigationBar" />
    </cn.vszone.ko.tv.views.NavigationBars>
    <fragment android:id="@id/main_frame_activity_fmt_device_status" android:tag="device_status_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/main_frame_margin_top_30px" android:layout_marginRight="@dimen/main_frame_device_status_marginRight_50px" android:layout_alignParentTop="true" android:layout_alignParentRight="true" class="cn.vszone.ko.tv.fragments.DeviceStatusBarFragment" />
    <LinearLayout android:gravity="right|center" android:id="@id/main_frame_activity_ll_bottom_bg" android:layout_width="fill_parent" android:layout_height="@dimen/battle_hall_broadcast_region_height_60px" android:layout_alignParentBottom="true">
        <View android:id="@id/broadcast_v_bg" android:background="@color/black_per30" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="@dimen/battle_hall_broadcast_region_height_60px" android:layout_weight="1.0" />
        <LinearLayout android:gravity="right|center" android:id="@id/operation_ll_bg" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip">
            <ImageView android:id="@id/operation_iv_tips" android:layout_width="@dimen/operation_tips_width_358px" android:layout_height="@dimen/operation_tips_height_58px" android:src="@drawable/ico_operation_footer_type" android:contentDescription="@string/app_name" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout android:id="@id/main_frame_activity_fmt_broadcast" android:layout_width="@dimen/broadcast_width_980px" android:layout_height="@dimen/battle_hall_broadcast_region_height_60px" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <FrameLayout android:id="@id/main_frame_toolbar" android:layout_width="fill_parent" android:layout_height="@dimen/toolbar_height_114px" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
</RelativeLayout>