<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_size72px" android:textColor="@color/font_white" android:id="@id/my_account_tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_vertical_82px" android:text="@string/my_account" style="@style/WhiteTextStyle" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_vertical_110px">
        <ImageView android:id="@id/my_account_iv_avatar" android:layout_width="@dimen/my_account_iv_avatar_width_346px" android:layout_height="@dimen/my_account_iv_avatar_width_346px" android:contentDescription="@string/image_description" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="@dimen/my_account_iv_avatar_width_346px" android:layout_marginLeft="@dimen/my_account_bt_modif_avatar_marginleft_45px">
            <TextView android:textSize="@dimen/font_size58px" android:id="@id/my_account_tv_name" android:layout_width="@dimen/my_account_tv_name_width_500px" android:layout_height="wrap_content" android:layout_marginTop="@dimen/my_account_tv_name_margin_top_24px" android:text="@string/my_account_nick_name" android:maxLength="8" android:layout_alignParentTop="true" android:layout_centerVertical="true" />
            <cn.vszone.ko.tv.views.FontEnlargeTextView android:textSize="@dimen/font_size50px" android:textColor="@drawable/prompt_dialog_bt_textcolor_selector" android:gravity="center" android:id="@id/my_account_fetv_modif_name" android:background="@drawable/menu_item_selector" android:focusable="true" android:layout_width="@dimen/my_account_bt_modif_avatar_width_352px" android:layout_height="@dimen/my_account_bt_modif_avatar_height_100px" android:layout_marginBottom="@dimen/my_account_bt_modif_name_margin_bottom_24px" android:text="@string/my_account_modif_nick_name" android:layout_above="@id/my_account_fetv_modif_avatar" />
            <cn.vszone.ko.tv.views.FontEnlargeTextView android:textSize="@dimen/font_size50px" android:textColor="@drawable/prompt_dialog_bt_textcolor_selector" android:gravity="center" android:id="@id/my_account_fetv_modif_avatar" android:background="@drawable/menu_item_selector" android:focusable="true" android:layout_width="@dimen/my_account_bt_modif_avatar_width_352px" android:layout_height="@dimen/my_account_bt_modif_avatar_height_100px" android:text="@string/my_account_modif_nick_avatar" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/my_account_battle_info_lyt" android:background="@color/black_per30" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/my_account_battle_info_lyt_margin_top_80px">
        <cn.vszone.ko.tv.views.MyAccountGameResultItemView android:id="@id/my_account_lyt_battle_info_street_fight_97" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <cn.vszone.ko.tv.views.MyAccountGameResultItemView android:id="@id/my_account_lyt_battle_info_knights_of_valour_super_heroes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/my_account_battle_info_lyt_margin_left_134px" />
    </LinearLayout>
</LinearLayout>